@startuml Actor System

interface Mailbox {
+ Send()
+ SendB()
- tryReceive()
}

interface Actor {
+ Poll()
}

class proc {
- Mailbox
- Actor
}

class Router {
- ready
- procs
}

class System {
- ready
}

class ready {
- schedule()
}

proc::Mailbox --> Mailbox
proc::Actor --> Actor
Router::ready --> ready
Router::procs --> proc
System::ready --> ready

@enduml
